--- a/public/index.css
+++ b/public/index.css
@@ -22,11 +22,6 @@ html {
   max-width: 700px;
 }
 
-.dashboard {
-  background-color: rgb(16, 16, 16);
-  border: solid 1px rgb(63, 63, 63);
-}
-
 .dashboard_content {
   padding: 30px;
   display: flex;
@@ -91,11 +86,18 @@ html {
 .input {
   display: flex;
   flex-direction: column;
+  padding-top: 7px;
 }
 
 .input_label {
   font-size: 16px;
   padding-bottom: 5px;
+}
+
+.input_text {
+  background-color: rgb(43, 43, 43);
+  border: solid rgb(51, 51, 51) 1px;
+  color: white;
 }
 
 .panel {
@@ -112,5 +114,17 @@ html {
 .panel_header {
   font-size: 20px;
   font-weight: 700;
-  padding-bottom: 16px;
+  padding-bottom: 12px;
+}
+
+.submit {
+  background-color:rgb(235, 235, 235);
+  box-shadow: rgba(0, 0, 0, 0.2) 0px 7px 29px 0px;
+  border: solid 1px rgb(51, 51, 51);
+  color: black;
+  padding: 10px;
+  align-self: flex-start;
+  display: inline-block;
+  margin-top: 20px;
+  border-radius: 5px;
 }
