--- a/public/index.css
+++ b/public/index.css
@@ -86,7 +86,7 @@ html {
 .input {
   display: flex;
   flex-direction: column;
-  padding-top: 7px;
+  padding-top: 10px;
 }
 
 .input_label {
@@ -122,9 +122,10 @@ html {
   box-shadow: rgba(0, 0, 0, 0.2) 0px 7px 29px 0px;
   border: solid 1px rgb(51, 51, 51);
   color: black;
-  padding: 10px;
+  padding: 5px 17px;
+  margin-top: 20px;
+  margin-left: 3px;
   align-self: flex-start;
   display: inline-block;
-  margin-top: 20px;
   border-radius: 5px;
 }
